# NewCP

./: .gitignore  README.md
NewCP/: .gitignore  Cargo.toml  README.md  app_ir.txt  build_output.txt  inline.ll  no_neg.ll  out.txt
NewCP/.cargo/: config.toml
NewCP/Mod/: App.cp  ArrayMethods.cp  BbApp.cp  BbInit.cp  BrkProbe.cp  Calc.cp  CaseWith.cp  Config.cp  Console.cp  ConsoleRealProbe.cp  Consts.cp  Containers.cp  Controllers.cp  Converters.cp  CrossTest.cp  Dates.cp  Dialog.cp  Documents.cp  Empty.cp  Factorial.cp  Files.cp  FontProbe.cp  Fonts.cp  Graph.cp  HelloPixels.cp  HostClipboard.cp  HostClipboardSys.cp  HostDateSys.cp  HostDates.cp  HostDialog.cp  HostDialogSys.cp  HostFileSys.cp  HostFiles.cp  HostFonts.cp  HostFontsSys.cp  HostFrame.cp  HostMenus.cp  HostPng.cp  HostPorts.cp  HostPortsSys.cp  (+85 more)
NewCP/docs/: MVC_summary.md  blackbox-jit-compatibility.md  blackbox_architecture.md  bug_report_sema_and_vtable.md  bug_report_sema_name_collision.md  bug_report_short.md  compiler-architecture.md  component-pascal-language-and-compiler-notes.md  cp_wingui.md  dates_module_investigation.md  deferred_fixes.md  display_primitives.md  epic_a_task_sheet.md  files_module_investigation.md  framework_recovery_backlog.md  garbage-collection.md  garbage_collection.md  gui-integration.md  gui_summary.md  heap_introspection.md  igui_design.md  jit_and_heap_improvements.md  llvm-codegen-design.md  loader-production-tracker.md  loader_changes.md  next_milestones.md  odc_doc.md  odc_yaml_format.md  oop_runtime_status.md  pane_demo_hang.md  roadmap.md  stores_module_design.md  (+8 more)
(+1734 files in other folders)
