[workspace]
members = [
    "src/newcp-driver",
    "src/newcp-ir",
    "src/newcp-lexer",
    "src/newcp-llvm",
    "src/newcp-loader",
    "src/newcp-parser",
    "src/newcp-runtime",
    "src/newcp-sema",
    "tests/newcp-compat-tests",
    "tests/newcp-tests",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
