[package]
name = "newcp-driver"
version = "0.1.0"
edition = "2024"

[features]
gui = ["newcp-runtime/gui"]

[dependencies]
newcp-ir = { path = "../newcp-ir" }
newcp-lexer = { path = "../newcp-lexer" }
newcp-llvm = { path = "../newcp-llvm" }
newcp-loader = { path = "../newcp-loader" }
newcp-parser = { path = "../newcp-parser" }
newcp-runtime = { path = "../newcp-runtime" }
newcp-sema = { path = "../newcp-sema" }
